# argent

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  recent.rs  save.rs  settings.rs  window.rs
src-tauri/src/sb/: client.rs  error.rs  models.rs
src/components/: Editor.tsx  MarkdownEditor.tsx  RecentNotes.tsx  SettingsPanel.tsx  TopBar.tsx
src/lib/: path.ts  shortcuts.ts  status.ts
src/lib/codemirror/: live-preview.ts  theme.ts
src/store/: draft.ts  settings.ts  status.ts
